--- a/fr v2/css/middle/happiwork.css
+++ b/fr v2/css/middle/happiwork.css
@@ -1,7 +1,7 @@
 /** CSS PROJETS HAPPIWORK **/
 
 body {
-	background : url("../images/body.png") repeat scroll 0% 0% transparent;
+	background : url("../../images/body.png") repeat scroll 0% 0% transparent;
 	margin: 0 auto;
 }
 
@@ -9,17 +9,18 @@ body {
 
 .content {
 	width: 100%;
-	height: 75rem;
+	height: 72rem;
 	padding-top: 4%;
 	margin: auto;
 	font-family: 'Helvetica Neue';
 }
 
-.content h1 {
+.content h1{
 	text-align: center;
-	color: #F2A101;
-	font-size: 2rem;
-	margin-bottom: 1%;
+	color: #FEEA34;
+	font-size: 1.3rem;
+	padding-top: 1%;
+	background-color: #87CBFE;
 }
 
 .content p {
@@ -38,26 +39,20 @@ body {
 	color: #2252A5;
 }
 
-.content h2 {
-	text-align: center;
-	color: #FEEA34;
-	font-size: 1.5rem;
-	padding-top: 1%;
-	background-color: #87CBFE;
-}
 
 /** Calendrier HappiWork **/ 
 section[name="beginning"] li, section[name="aftermatch"] li{
-	width: 15%;
+	width: 20%;
 	height: 7rem;
 	background-color: #F4F4F4;	
 	border: 2px solid #87CBFE;
 	border-radius: 3% 3% 3% 3%;
 	list-style: none outside none;
 	position: relative;
-	margin: 1em 0px;
-	margin-left: 42%;
+	margin: auto;
+	display: block;
 	margin-bottom: 2%;
+	margin-top: 2%;
 }
 
 section[name="calendar"] {
@@ -66,7 +61,7 @@ height: 29rem;
 }
 
 section[name="calendar"] ol li{
-	width: 15%;
+	width: 19%;
 	height: 8rem;
 	background-color: #F4F4F4;	
 	border: 2px solid #87CBFE;
@@ -82,8 +77,12 @@ section[name="calendar"] ol li{
 	margin-top: 2%;
     margin-left: auto;
     margin-right: auto;
-	width: 5%;
-	height: 7rem;
+	width: 4%;
+	height: 5rem;
+}
+
+.content img[id] {
+	margin-top: 4%;
 }
 
 /** Organisation calendrier **/
@@ -93,28 +92,28 @@ section ol {
 
 section  ol  li:nth-child(1),section  ol  li:nth-child(5),section  ol  li:nth-child(9) {
 	float: left;
-	left: 12%;
+	left: 5%;
 	clear: left;
 	margin-right: 2%;
 }
 
 section  ol  li:nth-child(2),section  ol  li:nth-child(6),section  ol  li:nth-child(10) {
 	float: left;
-	left: 15%;
+	left: 8%;
 	margin-right: 2%;
 	
 }
 
 section  ol  li:nth-child(3),section  ol  li:nth-child(7),section  ol  li:nth-child(11) {
 	float: right;
-	right: 33%;
+	right: 28%;
 	margin-left: 2%;
 	
 }
 
 section  ol  li:nth-child(4),section  ol  li:nth-child(8),section  ol  li:nth-child(12) {
 	float: right;
-	left: 4%;
+	left: 16%;
 	margin-left: 2%;
 }
 
