--- a/fr v2/css/middle/header_footer.css
+++ b/fr v2/css/middle/header_footer.css
@@ -122,6 +122,7 @@ footer section[name="about"] a {
 small {
 	font-size: 0.8rem;
 	font-family: 'PMN55',arial,verdana,sans-serif;
+	text-align: center;
 }
 
 /** ICON STAY CONNECTED **/
