--- a/fr v2/css/mobile_mini/happiwork.css
+++ b/fr v2/css/mobile_mini/happiwork.css
@@ -1,27 +1,30 @@
 /** CSS PROJETS HAPPIWORK **/
 
 body {
-	background : url("../images/body.png") repeat scroll 0% 0% transparent;
+	background : url("../../images/body.png") repeat scroll 0% 0% transparent;
 	margin: 0 auto;
 }
 
+
+/** CONTENT **/
 .content {
 	width: 100%;
-	height: 75rem;
+	height: 86rem;
 	padding-top: 4%;
 	margin: auto;
 	font-family: 'Helvetica Neue';
 }
 
-.content h1 {
+.content h1{
 	text-align: center;
-	color: #F2A101;
-	font-size: 2rem;
-	margin-bottom: 1%;
+	color: #FEEA34;
+	font-size: 1rem;
+	padding-top: 1%;
+	background-color: #87CBFE;
 }
 
 .content p {
-	font-size: 1.1rem;
+	font-size: 0.8rem;
 	/**color: #90A0D7;**/
 	color: #A7A8A8;
 	text-align: center;
@@ -36,26 +39,20 @@ body {
 	color: #2252A5;
 }
 
-.content h2 {
-	text-align: center;
-	color: #FEEA34;
-	font-size: 1.5rem;
-	padding-top: 1%;
-	background-color: #87CBFE;
-}
 
-/** Projet **/ 
+/** Calendrier Happiwork **/ 
 section[name="beginning"] li, section[name="aftermatch"] li{
-	width: 15%;
-	height: 7rem;
+	width: 32%;
+	height: 5rem;
 	background-color: #F4F4F4;	
 	border: 2px solid #87CBFE;
 	border-radius: 3% 3% 3% 3%;
 	list-style: none outside none;
 	position: relative;
-	margin: 1em 0px;
-	margin-left: 42%;
+	margin: auto;
+	display: block;
 	margin-bottom: 2%;
+	margin-top: 5%;
 }
 
 section[name="calendar"] {
@@ -64,8 +61,8 @@ section[name="calendar"] {
 }
 
 section[name="calendar"] ol li{
-	width: 15%;
-	height: 8rem;
+	width: 38%;
+	height: 7rem;
 	background-color: #F4F4F4;	
 	border: 2px solid #87CBFE;
 	border-radius: 3% 3% 3% 3%;
@@ -80,8 +77,12 @@ section[name="calendar"] ol li{
 	margin-top: 2%;
     margin-left: auto;
     margin-right: auto;
-	width: 5%;
-	height: 7rem;
+	width: 7%;
+	height: 3rem;
+}
+
+.content img[id] {
+	margin-top: 130%;
 }
 
 /** Organisation calendrier **/
@@ -89,33 +90,19 @@ section ol {
 	padding : 0%;
 }
 
-section  ol  li:nth-child(1),section  ol  li:nth-child(5),section  ol  li:nth-child(9) {
+section  ol  li:nth-child(1),section  ol  li:nth-child(3), section  ol  li:nth-child(5), section  ol  li:nth-child(7),section  ol  li:nth-child(9),section  ol  li:nth-child(11)  {
 	float: left;
-	left: 12%;
+	left: 5%;
 	clear: left;
 	margin-right: 2%;
 }
 
-section  ol  li:nth-child(2),section  ol  li:nth-child(6),section  ol  li:nth-child(10) {
-	float: left;
-	left: 15%;
+section  ol  li:nth-child(2),section  ol  li:nth-child(4), section  ol  li:nth-child(6),section  ol  li:nth-child(8), section  ol  li:nth-child(10), section  ol  li:nth-child(12) {
+	float: right;
+	right: 4%;
 	margin-right: 2%;
 	
 }
-
-section  ol  li:nth-child(3),section  ol  li:nth-child(7),section  ol  li:nth-child(11) {
-	float: right;
-	right: 33%;
-	margin-left: 2%;
-	
-}
-
-section  ol  li:nth-child(4),section  ol  li:nth-child(8),section  ol  li:nth-child(12) {
-	float: right;
-	left: 4%;
-	margin-left: 2%;
-}
-
 
 /** Soulignement des liens **/
 section a:hover {
